# chex

./: .gitignore  CMakeLists.txt  CMakeLists.txt.bak  Dockerfile  README.md  build.sh  buildWheels.sh  chex.code-workspace  cimporter.py  cpptest.cpp  debug.sh  notes.txt  pyTest.sh  pyproject.toml  rebuild.sh  removedCode.h  run.sh  runDocker.sh  setup.py  setup_template.py  startNotebook.sh  test.sh  testPy.sh
saved/: metrics
src/: Chex.cpp  Chex.h  GPTConfig.h  chex.cpp  helperz.h  neuralBase.h
